--- a/apps/styles.css
+++ b/apps/styles.css
@@ -1,8 +1,8 @@
-/* div.chart-wrapper fit-x fit-y{
+div.chart-wrapper fit-x fit-y{
     padding: 20px 20px 20px 20px;
 }
 /* Adapted from https://startbootstrap.com/theme/sb-admin-2 */
-/* div.css-1r6slb0.e1tzin5v2 {
+div.css-1r6slb0.e1tzin5v2 {
     background-color: #FFFFFF;
     border: 1px solid #CCCCCC;
     padding: 5% 5% 5% 10%;
@@ -11,9 +11,10 @@
     border-left: 0.5rem solid #9ae1b2 !important;
     box-shadow: 0 0.15rem 1.75rem 0 rgba(58, 59, 69, 0.15) !important;
     
-} */
+}
 
-/* label.css-mkogse.e16fv1kl2 {
+
+label.css-mkogse.e16fv1kl2 {
     color: #36b9cc !important;
     font-weight: 700 !important;
     text-transform: uppercase !important;
@@ -21,27 +22,27 @@
 
 
 /* Move block container higher */
-/* div.block-container.css-18e3th9.egzxvld2 {
+div.block-container.css-18e3th9.egzxvld2 {
   margin-top: -5em;
-} */
+}
 
 
 /* Hide hamburger menu and footer */
-/* div.css-r698ls.e8zbici2 {
+ div.css-r698ls.e8zbici2 {
   display: none;
-} */ 
+}  
 
-/* footer.css-ipbk5a.egzxvld4 {
+footer.css-ipbk5a.egzxvld4 {
   display: none;
 }
 
 footer.css-12gp8ed.eknhn3m4 {
-  display: none;
+  display: none;  
 }
 
 div.vg-tooltip-element {
   display: none;
-} */ 
+} 
 
 div.container-xxl d-flex flex-column flex-shrink-0 p-h nav-justified{
   position:relative;
