--- a/apps/styles.css
+++ b/apps/styles.css
@@ -2,7 +2,7 @@ div.chart-wrapper fit-x fit-y{
     padding: 20px 20px 20px 20px;
 }
 /* Adapted from https://startbootstrap.com/theme/sb-admin-2 */
-div.css-1r6slb0.e1tzin5v2 {
+div.css-1r6slb0 {
     background-color: #FFFFFF;
     border: 1px solid #CCCCCC;
     padding: 5% 5% 5% 10%;
@@ -12,13 +12,19 @@ div.css-1r6slb0.e1tzin5v2 {
     box-shadow: 0 0.15rem 1.75rem 0 rgba(58, 59, 69, 0.15) !important;
     
 }
+/* .css-1apzn91{
+  border: 2px solid black;
+}
+.css-1r6slb0 .e1tzin5v2{
+  border: 1px solid black;
+}
 
 
 label.css-mkogse.e16fv1kl2 {
     color: #36b9cc !important;
     font-weight: 700 !important;
     text-transform: uppercase !important;
-}
+} */
 
 
 /* Move block container higher */
