--- a/apps/styles.css
+++ b/apps/styles.css
@@ -12,6 +12,12 @@ div.css-1r6slb0 {
     box-shadow: 0 0.15rem 1.75rem 0 rgba(58, 59, 69, 0.15) !important;
     
 }
+@media (prefers-color-scheme: light) {
+  /* When default theme is light */
+  div.css-1r6slb0 {
+      color: black;
+  }
+}
 /* .css-1apzn91{
   border: 2px solid black;
 }
