--- a/apps/styles.css
+++ b/apps/styles.css
@@ -3,12 +3,12 @@ div.chart-wrapper fit-x fit-y{
 }
 /* Adapted from https://startbootstrap.com/theme/sb-admin-2 */
 div.css-1r6slb0 {
-    background-color: #FFFFFF;
-    border: 1px solid #CCCCCC;
+    background-color: #bfdee0e5;
+    border: 1px solid hsl(0, 0%, 80%);
     padding: 5% 5% 5% 10%;
     border-radius: 5px;
-    
-    border-left: 0.5rem solid #9ae1b2 !important;
+
+    border-left: 0.5rem solid #9ae1b2ec !important;
     box-shadow: 0 0.15rem 1.75rem 0 rgba(58, 59, 69, 0.15) !important;
     
 }
